--- a/letter-client/package.json
+++ b/letter-client/package.json
@@ -17,7 +17,10 @@
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "jspdf": "^3.0.3",
+    "nodemailer": "^7.0.11",
     "pdf-lib": "^1.17.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.6",
     "tailwindcss": "^4.1.17"
   }
