--- a/letter-server/package.json
+++ b/letter-server/package.json
@@ -16,10 +16,11 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "firebase-admin": "^12.0.0",
+    "googleapis": "^169.0.0",
     "helmet": "^8.0.0",
     "multer": "^2.0.2",
     "node-cron": "^3.0.3",
-    "nodemailer": "^7.0.10",
+    "nodemailer": "^7.0.11",
     "nodemon": "^3.1.10"
   }
 }
